// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceQuestionList renders renders the default state 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  data={
    Array [
      Object {
        "id": "foo",
      },
      Object {
        "id": "bar",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  horizontal={true}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  pagingEnabled={true}
  renderItem={[Function]}
  scrollEnabled={false}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={Object {}}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            Object {
              "width": 690,
            },
          ]
        }
      >
        <PlaceQuestion
          category={
            Object {
              "id": "foo",
            }
          }
          handleSetValue={[Function]}
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            Object {
              "width": 690,
            },
          ]
        }
      >
        <PlaceQuestion
          category={
            Object {
              "id": "bar",
            }
          }
          handleSetValue={[Function]}
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PlaceQuestionList renders renders with minimum required props 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  horizontal={true}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  pagingEnabled={true}
  renderItem={[Function]}
  scrollEnabled={false}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={Object {}}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View />
</RCTScrollView>
`;
